2014-07-22  Filip Pizlo  <fpizlo@apple.com>

        Merge r169148, r169185, r169188, r169578, r169582, r169584, r169588, r169753 from ftlopt.
        
        Note that r169753 is merged out of order because it fixes a bug in r169588.

    2014-06-10  Filip Pizlo  <fpizlo@apple.com>
    
            [ftlopt] Structure::dfgShouldWatchIfPossible() is unsound
            https://bugs.webkit.org/show_bug.cgi?id=133624
    
            Reviewed by Mark Hahnenberg.
    
            * runtime/Structure.h:
            (JSC::Structure::dfgShouldWatchIfPossible): Make it sound and add some verbiage.
    
    2014-06-04  Filip Pizlo  <fpizlo@apple.com>
    
            [ftlopt] AI should be able track structure sets larger than 1
            https://bugs.webkit.org/show_bug.cgi?id=128073
    
            Reviewed by Oliver Hunt.
            
            This makes two major changes to how AI (abstract interpreter) proves that a value has
            some structure:
            
            - StructureAbstractValue can now track an arbitrary number of structures. A set whose
              size is greater than one means that the value may have any of the structures, and we
              don't know which - but we do know that it cannot be any structure not in the set. The
              structure abstract value can still be TOP, which means the set of all structures. We
              artificially limit the set size to StructureAbstractValue::polymorphismLimit to guard
              memory explosion on pathological programs. This limit is big enough that it wouldn't
              kick in for normal code, since we have other heuristics that limit the number of
              structures that we would allow an inline cache to know about.
            
            - We eagerly set watchpoints on all watchable structures and then we assume that
              watchable structures are being watched, and that the watchpoint will jettison the code.